# BioTools

./: README.md  pyproject.toml  run_live_tests.py  run_tests.py
BioTools/: MITAB_parser.py  __init__.py  gene2uniprot.py  protein_annotation.py  wrappers.py
tests/: test_gene2uniprot.py  test_mitab_parser.py  test_protein_annotation.py
tests/integration/: test_gene2uniprot_live.py  test_protein_annotation_live.py
