[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BioTools"
version = "0.1.0"
description = "A package for biological data processing and analysis."
authors = [
    { name = "Yakov Mokin", email = "mokinyakov@mail.ru" }
]

dependencies = [
    "aiohttp",
    "asyncio",
    "tqdm",
    "matplotlib",
    "pandas"
]

[tool.setuptools]
packages = ["BioTools"]